--- a/froggy responses.css
+++ b/froggy responses.css
@@ -10,3 +10,13 @@ justify-content: flex-end
     display: flex;
   justify-content: center
   }
+
+
+3)
+  #pond {
+    display: flex;
+  justify-content: space-around
+  }
+
+
+  
