--- a/froggy responses.css
+++ b/froggy responses.css
@@ -24,3 +24,10 @@ justify-content: flex-end
     display: flex;
   justify-content: space-between
   }
+
+
+  5)
+  #pond {
+    display: flex;
+  align-items: flex-end
+  }
