--- a/froggy responses.css
+++ b/froggy responses.css
@@ -39,3 +39,11 @@ justify-content: flex-end
   align-items: center;
   justify-content: center
   }
+
+
+  7)
+  #pond {
+    display: flex;
+  justify-content: space-around;
+  align-items: flex-end
+  }
