--- a/froggy responses.css
+++ b/froggy responses.css
@@ -47,3 +47,10 @@ justify-content: flex-end
   justify-content: space-around;
   align-items: flex-end
   }
+
+
+  8)
+  #pond {
+    display: flex;
+  flex-direction: row-reverse
+  }
