--- a/froggy responses.css
+++ b/froggy responses.css
@@ -54,3 +54,10 @@ justify-content: flex-end
     display: flex;
   flex-direction: row-reverse
   }
+
+
+  9)
+  #pond {
+    display: flex;
+  flex-direction: column
+  }
