--- a/froggy responses.css
+++ b/froggy responses.css
@@ -61,3 +61,11 @@ justify-content: flex-end
     display: flex;
   flex-direction: column
   }
+
+
+  10)
+  #pond {
+    display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end
+  }
