--- a/froggy responses.css
+++ b/froggy responses.css
@@ -69,3 +69,40 @@ justify-content: flex-end
   flex-direction: row-reverse;
   justify-content: flex-end
   }
+
+
+  11)
+  #pond {
+    display: flex;
+  flex-direction : column;
+  justify-content: flex-end
+  }
+
+
+  12)
+  pond {
+    display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between
+  }
+
+
+  13)
+  #pond {
+    display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: flex-end
+  }
+
+
+  14)
+  #pond {
+    display: flex;
+  }
+  
+  .yellow {
+  order: +1
+  }
+
+
